# gate0_dsl

./: Cargo.toml  README.md  SYNTAX.md  tmp.rs
examples/: basic_usage.rs  saas_api_dsl.rs
src/: lib.rs
tests/: basic_test.rs
tests/snapshots/: basic_test__external_builder.snap  basic_test__field_rules.snap  basic_test__mixed_rules.snap  basic_test__simple_any_rules.snap  basic_test__simple_tuple_rules.snap  basic_test__where.snap
